--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,14 +6,14 @@
 
     <display-name>REST API implementation</display-name>
     <!--TODO: Implement oAuth2 up to the end so that it does not throw any exception-->
-    <!--<filter>
+    <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/rest/api/*</url-pattern>
-    </filter-mapping>-->
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <listener>
         <listener-class>
@@ -23,8 +23,8 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/REST_API-servlet.xml<!--,
-            /WEB-INF/REST_API-servlet-security.xml-->
+        <param-value>/WEB-INF/REST_API-servlet.xml,
+            /WEB-INF/REST_API-servlet-security.xml
         </param-value>
     </context-param>
 
