--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,8 +13,8 @@
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>-->
-
+    </filter-mapping>
+-->
     <listener>
         <listener-class>
             org.springframework.web.context.ContextLoaderListener
