--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,7 @@
          version="4.0">
 
     <display-name>REST API implementation</display-name>
+    <!--Spring Security filter-->
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -14,6 +15,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <!--Servlet configuration-->
     <servlet>
         <servlet-name>REST_API</servlet-name>
         <servlet-class>
