Photo download endpoint added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# FTP server credentials
+ftp.server=127.0.0.1
+ftp.port=21
+ftp.username=sandbox
+ftp.password=sandbox
 # Database credentials for PostgreSQL
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/web_services
