--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.3.0.RELEASE</version>
-        </dependency>
+        </dependency>-->
 
         <!--PostgreSQL Driver-->
         <dependency>
