--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         </dependency>
 
         <!--Spring security dependencies-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
@@ -43,7 +43,7 @@
             <groupId>org.springframework.security.oauth.boot</groupId>
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
             <version>2.0.0.RELEASE</version>
-        </dependency>
+        </dependency>-->
 
         <!--PostgreSQL Driver-->
         <dependency>
