--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,3 +1,9 @@
+#file.tmp.path=D:/Program files/servers/apache-tomcat-9.0.10_API/webapps/static/tmp
+# FTP server credentials
+ftp.server=127.0.0.1
+ftp.port=21
+ftp.username=sandbox
+ftp.password=sandbox
 # Database credentials for PostgreSQL
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/web_services
