--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -9,3 +9,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/web_services
 spring.datasource.username=service
 spring.datasource.password=service
+# Credentials for JdbcTokenStore
+spring.tokenstore.datasource.url=jdbc:postgresql://localhost:5432/web_services_oauth
+spring.tokenstore.datasource.username=service
+spring.tokenstore.datasource.password=service
