Migration to the MySQL

--- a/pom.xml
+++ b/pom.xml
@@ -85,11 +85,11 @@
             <scope>test</scope>
         </dependency>
 
-        <!--PostgreSQL Driver-->
+        <!--MySQL Driver-->
         <dependency>
-            <groupId>postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>8.3-606.jdbc4</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
         </dependency>
 
         <!-- Logging -->
