--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -5,11 +5,11 @@ ftp.port=21
 ftp.username=sandbox
 ftp.password=sandbox
 # Database credentials for PostgreSQL
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/web_services
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/web_services
 spring.datasource.username=service
 spring.datasource.password=service
 # Credentials for JdbcTokenStore
-spring.tokenstore.datasource.url=jdbc:postgresql://localhost:5432/web_services_oauth
+spring.tokenstore.datasource.url=jdbc:mysql://localhost:3306/web_services_oauth
 spring.tokenstore.datasource.username=service
 spring.tokenstore.datasource.password=service
