oAuth2 for the Swagger documentation added

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -13,3 +13,5 @@ spring.datasource.password=service
 spring.tokenstore.datasource.url=jdbc:mysql://localhost:3306/web_services_oauth
 spring.tokenstore.datasource.username=service
 spring.tokenstore.datasource.password=service
+#Swagger oAuth2 data
+config.oauth2.accessTokenUri=http://localhost:8080/rest/oauth/token
