--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -4,14 +4,17 @@ ftp.server=127.0.0.1
 ftp.port=21
 ftp.username=sandbox
 ftp.password=sandbox
+
 # Database credentials for PostgreSQL
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/web_services
 spring.datasource.username=service
 spring.datasource.password=service
+
 # Credentials for JdbcTokenStore
 spring.tokenstore.datasource.url=jdbc:mysql://localhost:3306/web_services_oauth
 spring.tokenstore.datasource.username=service
 spring.tokenstore.datasource.password=service
-#Swagger oAuth2 data
+
+# oAuth2 configuration
 config.oauth2.accessTokenUri=http://localhost:8080/rest/oauth/token
