Mock MVC integration test development started for the Spring REST Docs

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -6,7 +6,7 @@ ftp.username=sandbox
 ftp.password=sandbox
 
 # Database credentials for PostgreSQL
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/web_services
 spring.datasource.username=service
 spring.datasource.password=service
