--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -7,12 +7,12 @@ ftp.password=sandbox
 
 # Database credentials for PostgreSQL
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/web_services
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_services
 spring.datasource.username=service
 spring.datasource.password=service
 
 # Credentials for JdbcTokenStore
-spring.tokenstore.datasource.url=jdbc:mysql://localhost:3306/web_services_oauth
+spring.tokenstore.datasource.url=jdbc:mysql://localhost:3306/rest_services_oauth
 spring.tokenstore.datasource.username=service
 spring.tokenstore.datasource.password=service
 
