--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -7,7 +7,7 @@ ftp.password=sandbox
 
 # Database credentials for PostgreSQL
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/rest_services_dev
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_services
 spring.datasource.username=service
 spring.datasource.password=service
 
