--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -12,7 +12,7 @@ spring.datasource.username=service
 spring.datasource.password=service
 
 # Credentials for JdbcTokenStore
-spring.tokenstore.datasource.url=jdbc:mysql://localhost:3306/rest_services_oauth
+spring.tokenstore.datasource.url=jdbc:mysql://localhost:3306/rest_services_oauth?useSSL=false
 spring.tokenstore.datasource.username=service
 spring.tokenstore.datasource.password=service
 
