--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -7,9 +7,13 @@ ftp.password=sandbox
 
 # Database credentials for PostgreSQL
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/rest_services
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_services_dev?useSSL=false
 spring.datasource.username=service
 spring.datasource.password=service
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Credentials for JdbcTokenStore
 spring.tokenstore.datasource.url=jdbc:mysql://localhost:3306/rest_services_oauth?useSSL=false
