--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/rest_services_dev?useSSL=false
 spring.datasource.username=service
 spring.datasource.password=service
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
