ModelMapper dependency and its implementation started, order save with its delatils into a database still under construction

--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,13 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.7.0</version>
         </dependency>
+
+        <!--To DTO and from DTO serialization-->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
