--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <org.springframework-version>5.0.4.RELEASE</org.springframework-version>
         <org.hibernate-version>5.2.13.Final</org.hibernate-version>
         <org.slf4j-version>1.7.5</org.slf4j-version>
+        <com.fasterxml.jackson-version>2.9.6</com.fasterxml.jackson-version>
     </properties>
     <dependencies>
         <!-- Spring -->
@@ -119,12 +120,22 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.9.6</version>
+            <version>${com.fasterxml.jackson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${com.fasterxml.jackson-version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
-            <version>2.9.6</version>
+            <version>${com.fasterxml.jackson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180130</version>
         </dependency>
 
         <!-- AspectJ -->
