--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <org.hibernate-version>5.2.13.Final</org.hibernate-version>
         <org.slf4j-version>1.7.5</org.slf4j-version>
         <com.fasterxml.jackson-version>2.9.6</com.fasterxml.jackson-version>
+        <io.swagger-version>2.8.0</io.swagger-version>
     </properties>
     <dependencies>
         <!-- Spring -->
@@ -166,12 +167,12 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.8.0</version>
+            <version>${io.swagger-version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.7.0</version>
+            <version>${io.swagger-version}</version>
         </dependency>
 
         <!--To DTO and from DTO serialization-->
