--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ ftp.port=21
 ftp.username=sandbox
 ftp.password=sandbox
 
-# Database credentials for PostgreSQL
+# Database credentials for MySQL
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/rest_services?useSSL=false
 spring.datasource.username=service
