--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/rest_services?useSSL=false
 spring.datasource.username=service
 spring.datasource.password=service
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
-spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.ddl-auto=update
+hibernate.show-sql=true
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # Credentials for JdbcTokenStore
 spring.tokenstore.datasource.url=jdbc:mysql://localhost:3306/rest_services_oauth?useSSL=false
