--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.password=service
 
 hibernate.ddl-auto=update
 hibernate.show-sql=true
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
 
 # Credentials for JdbcTokenStore
 spring.tokenstore.datasource.url=jdbc:mysql://localhost:3306/rest_services_oauth?useSSL=false
