Public key retrieval allowed for the MySQL database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ ftp.password=sandbox
 
 # Database credentials for MySQL
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/rest_services?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_services?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=service
 spring.datasource.password=service
 
@@ -16,7 +16,7 @@ hibernate.show-sql=true
 hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
 
 # Credentials for JdbcTokenStore
-spring.tokenstore.datasource.url=jdbc:mysql://localhost:3306/rest_services_oauth?useSSL=false
+spring.tokenstore.datasource.url=jdbc:mysql://localhost:3306/rest_services_oauth?allowPublicKeyRetrieval=true&useSSL=false
 spring.tokenstore.datasource.username=service
 spring.tokenstore.datasource.password=service
 
