--- a/REST-server/src/main/resources/application.properties
+++ b/REST-server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#file.upload.path=D:/Program files/servers/apache-tomcat-9.0.10_API/webapps/media
+
 # Database credentials for MySQL
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/rest_services?allowPublicKeyRetrieval=true&useSSL=false
