--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>REST-server</module>
         <module>REST-client</module>
+        <module>REST-server-jersey</module>
     </modules>
     <build>
         <plugins>
