--- a/REST-server-jersey/src/main/webapp/WEB-INF/web.xml
+++ b/REST-server-jersey/src/main/webapp/WEB-INF/web.xml
@@ -20,13 +20,17 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>org.sergei.rest</param-value>
+            <param-value>
+                org.sergei.rest,
+                org.codehaus.jackson.jaxrs
+            </param-value>
         </init-param>
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
             <param-value>org.sergei.rest.Application</param-value>
         </init-param>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>jersery-rest</servlet-name>
         <url-pattern>/api/v1/*</url-pattern>
