--- a/REST-server-jersey/pom.xml
+++ b/REST-server-jersey/pom.xml
@@ -132,6 +132,14 @@
             <artifactId>javax.el</artifactId>
             <version>3.0.1-b09</version>
         </dependency>
+
+        <!--Swagger-->
+        <!--<dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-jersey2-jaxrs</artifactId>
+            <version>1.5.21</version>
+        </dependency>-->
+
     </dependencies>
 
     <build>
