--- a/REST-server-jersey/src/main/webapp/WEB-INF/web.xml
+++ b/REST-server-jersey/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>jersery-rest</servlet-name>
+        <servlet-name>jersey-rest</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
@@ -32,7 +32,7 @@
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>jersery-rest</servlet-name>
+        <servlet-name>jersey-rest</servlet-name>
         <url-pattern>/api/v1/*</url-pattern>
     </servlet-mapping>
 </web-app>
