--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ language: java
 
 jdk:
 - oraclejdk8
-- oraclejdk9
-- oraclejdk10
 - openjdk8
-- openjdk9
-- openjdk10
+
+services:
+- mysql
 
 branches:
   only:
   - master
+  - develop
