--- a/REST-server-spring/pom.xml
+++ b/REST-server-spring/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.sergei</groupId>
-    <artifactId>REST-server</artifactId>
+    <artifactId>REST-server-spring</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
