--- a/REST-server-jersey/pom.xml
+++ b/REST-server-jersey/pom.xml
@@ -13,6 +13,7 @@
         <org.hibernate-version>5.2.13.Final</org.hibernate-version>
         <org.slf4j-version>1.7.5</org.slf4j-version>
         <jersey-version>2.25.1</jersey-version>
+        <io.swagger-version>2.0.5</io.swagger-version>
     </properties>
     <dependencies>
         <!--Java Servlet dependencies-->
@@ -147,12 +148,40 @@
             <version>2.1.1</version>
         </dependency>
 
-        <!--Swagger-->
-        <!--<dependency>
+        <!--Swagger dependencies-->
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-models</artifactId>
+            <version>${io.swagger-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>${io.swagger-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-core</artifactId>
+            <version>${io.swagger-version}</version>
+        </dependency>
+        <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-jersey2-jaxrs</artifactId>
             <version>1.5.21</version>
-        </dependency>-->
+        </dependency>
+
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
+        <!--CORS filter-->
+        <dependency>
+            <groupId>com.thetransactioncompany</groupId>
+            <artifactId>cors-filter</artifactId>
+            <version>2.6</version>
+        </dependency>
 
     </dependencies>
 
