--- a/REST-server-jersey/src/main/webapp/WEB-INF/web.xml
+++ b/REST-server-jersey/src/main/webapp/WEB-INF/web.xml
@@ -35,4 +35,24 @@
         <servlet-name>jersey-rest</servlet-name>
         <url-pattern>/api/v1/*</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>SwaggerDoc</servlet-name>
+        <servlet-class>org.sergei.rest.swagger.SwaggerConfig</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>SwaggerDoc</servlet-name>
+        <url-pattern>/docs/*</url-pattern>
+    </servlet-mapping>
+
+    <filter>
+        <filter-name>CorsFilter</filter-name>
+        <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CorsFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
