minor changes in test cases

--- a/REST-server/src/main/resources/application.yml
+++ b/REST-server/src/main/resources/application.yml
@@ -24,3 +24,7 @@ security:
   oauth2:
     resource:
       accessTokenUri: http://localhost:9091/oauth/token
+management:
+  endpoint:
+    health:
+      show-details: always
