--- a/REST-client/src/main/resources/application.yml
+++ b/REST-client/src/main/resources/application.yml
@@ -1,9 +1,17 @@
 server:
-    port: 9092
+  port: 9088
+  http:
+    port: 1010
+  ssl:
+    enabled: true
+    key-store-type: PKCS12
+    key-store: classpath:tls/keystore.p12
+    key-store-password: keyStoreSecret
+    key-alias: tomcat
 management:
-    endpoint:
-        health:
-            show-details: always
+  endpoint:
+    health:
+      show-details: always
 oauth:
-    username: admin
-    password: 123456
+  username: admin
+  password: 123456
