client ID and secret moved to the config file

--- a/REST-client/src/main/resources/application.yml
+++ b/REST-client/src/main/resources/application.yml
@@ -13,5 +13,7 @@ management:
     health:
       show-details: always
 oauth:
+  client-id: trusted-client
+  client-secret: trusted-client-secret
   username: admin
   password: 123456
